        - added add_statusbar() function
        - added menu_item() helper function
        - added add_menubar() function
        - added icons for menubar & taskbar trayicon menu
        - added imports, cache tables on start
        - removed unused table loads
        - added refresh timer for the new filesize gauge on tab 6
        - added new control to set max size of logfiles on tab 2
        - tab 1:
            - added statusbar msgs for controls on tab 1
        - tab 2:
            - added statusbar msgs for controls on tab 2
        - tab 3:
            - renamed controlname of "checkbox_checkage"
                - using "LOG_PATH" for "exception.txt"
            - changed message dialog on "checkbox_alibicheck"
            - added "checkbox_checkspaces"
            - added statusbar msgs for controls on tab 3
            - check if all rules have set a category before save
            - refresh rulename in treebook view if rulename was changed  / bug found by jrock
        - tab 4:
            - add "Cancel" button to add rule message dialog
            - disable "OK" button till rulename was entered
            - prevents a rule without a name
            - changes in del_rule() function
                - small fix
                - and from now on: the last rule can not be deleted (with info dialog)
            - added statusbar msgs for controls on tab 4
        - tab 5:
            - add "Cancel" button to add categories message dialog
            - disable "OK" button till categoryname was entered
            - prevents a category without a name
            - changes in import_categories_tbl() function
            - changes in add_category() function
            - added statusbar msgs for controls on tab 5
        - tab 6:
            - added statusbar msgs for controls on tab 6

    - update: "core/log.lua"  / by pulsar
        - added check_filesize() function to clear logfile if it reaches the max allowable size (2MB)  / requested by Devious